== 0.3.0 / 2008-01-11

  * minor enhancements
    * supports privileges


== 0.2.1 / 2007-07-19

* minor enhancements
  * fixed version numbers
  * fixed sample code


== 0.2.0 / 2007-07-19

* 1 major enhancement
  * Birthday!
