@@ -4,12 +4,10 @@ README.txt
 Rakefile
 lib/ruby-wmi.rb
 lib/ruby-wmi/base.rb
-lib/ruby-wmi/cim.rb
 lib/ruby-wmi/core_ext.rb
 lib/ruby-wmi/constants.rb
 lib/ruby-wmi/core_ext/time_ext.rb
 lib/ruby-wmi/core_ext/win32ole_ext.rb
-lib/ruby-wmi/win32.rb
 samples/disk.rb
 samples/logoff.rb
 samples/memory.rb
